--- a/src/sass/foundation/_base.scss
+++ b/src/sass/foundation/_base.scss
@@ -139,7 +139,7 @@ $color-orange: #ff9648;
     // width: 100vw;
     @include mq(md) {
       // left: -5%;
-      left: -20%;
+      left: 0;
       bottom: -25%;
     }
   }
