--- a/src/sass/project/_p-work.scss
+++ b/src/sass/project/_p-work.scss
@@ -8,11 +8,12 @@
   display: none;
   @include mq(md) {
     display: block;
+    height: 100%;
     position: absolute;
     z-index: -1;
     left: 0;
     width: 100%;
-    height: fit-content;
+    // height: fit-content;
     background: linear-gradient(
       90deg,
       transparent 0%,
@@ -20,6 +21,7 @@
       $color-blue 25%
     );
     top: 160px;
+    // display: block;
   }
 }
 
@@ -44,9 +46,9 @@
 }
 
 .p-work__first-info {
-  text-align: center;
   margin-bottom: rem(30);
   @include mq(md) {
+    text-align: center;
     margin-bottom: rem(40);
   }
 }
@@ -60,7 +62,8 @@
     position: absolute;
     top: 0;
     left: 10px;
-    width: 100%;
+    width: 100vw;
+    margin: 0 calc(50% - 50vw);
     height: 100%;
     z-index: -1;
     background: linear-gradient(
@@ -101,8 +104,10 @@
 .p-work__img {
   width: 100%;
   // order: 2;
+  margin-bottom: rem(30);
   @include mq(md) {
     // order: 1;
+    margin-bottom: rem(0);
     max-width: rem(600);
   }
   img {
