sp時のアコーディオン jsの調整

--- a/src/sass/project/_p-anckerLink.scss
+++ b/src/sass/project/_p-anckerLink.scss
@@ -21,7 +21,7 @@
 
 
 .p-anckerLink__title-wrap {
-  margin-bottom: rem(10);
+  // margin-bottom: rem(10);
   @include mq(md){
     width:  rem(100);
     margin: 0 auto;
