--- a/src/sass/foundation/_base.scss
+++ b/src/sass/foundation/_base.scss
@@ -44,7 +44,7 @@ html {
 
 body {
   font-family: $font-family-yu;
-  font-weight: $semi-bold;
+  font-weight: $regular;
   color: $color-black;
   // スムーススクロール
   scroll-behavior: smooth;
