【修正】スタッフ詳細、テキストのスタイルの修正

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,6 +149,15 @@ a {
     opacity: 0.8;
   }
 }
+p {
+  line-height: 1.8;
+}
+
+@media screen and (min-width: 800px) {
+  p {
+    line-height: 2;
+  }
+}
 /*===================================
  * カラー
 ===================================*/
@@ -252,6 +261,8 @@ a {
 .main-title.message-title::before {
   font-size: 80px;
   font-size: 5rem;
+  font-size: clamp(60px, 5vw, 80px);
+  font-size: clamp(3.75rem, 5vw, 5rem);
   bottom: 0;
 }
 
@@ -261,8 +272,8 @@ a {
   }
 }
 .main-title.schedule-title::before {
-  font-size: 80px;
-  font-size: 5rem;
+  font-size: clamp(60px, 5vw, 70px);
+  font-size: clamp(3.75rem, 5vw, 4.375rem);
   bottom: 0;
 }
 
@@ -295,8 +306,8 @@ a {
   }
 }
 .main-title.value-title::before {
-  font-size: 80px;
-  font-size: 5rem;
+  font-size: clamp(60px, 5vw, 80px);
+  font-size: clamp(3.75rem, 5vw, 5rem);
   color: #fff;
   bottom: 0;
 }
@@ -365,11 +376,13 @@ a {
 .main-title.company-title::before {
   font-size: 65px;
   font-size: 4.0625rem;
-  bottom: 0;
+  bottom: 20px;
+  bottom: 1.25rem;
 }
 
 @media screen and (min-width: 800px) {
   .main-title.company-title::before {
+    bottom: 1.25rem;
     font-size: 9.375rem;
   }
 }
@@ -472,8 +485,23 @@ a {
   margin-bottom: 6.25rem;
 }
 
+.l-schedule:last-of-type {
+  margin-bottom: 200px;
+  margin-bottom: 12.5rem;
+}
+
 @media screen and (min-width: 800px) {
   .l-schedule {
+    margin-bottom: 11.25rem;
+  }
+}
+.l-schedule.bottom {
+  margin-bottom: 200px;
+  margin-bottom: 12.5rem;
+}
+
+@media screen and (min-width: 800px) {
+  .l-schedule.bottom {
     margin-bottom: 11.25rem;
   }
 }
@@ -1131,6 +1159,8 @@ a {
 }
 
 .p-anckerLink__item {
+  color: #0098ee;
+  text-decoration: underline;
   position: relative;
 }
 
@@ -1241,7 +1271,7 @@ a {
   content: "";
   position: absolute;
   top: 0;
-  left: 10px;
+  left: 0;
   width: 100vw;
   margin: 0 calc(50% - 50vw);
   height: 100%;
@@ -1255,12 +1285,6 @@ a {
     display: none;
   }
 }
-.p-work__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 @media screen and (min-width: 800px) {
   .p-work__item {
     display: -webkit-box;
@@ -1319,8 +1343,8 @@ a {
 .p-work__item-title {
   font-size: 24px;
   font-size: 1.5rem;
-  padding-left: 70px;
-  padding-left: 4.375rem;
+  padding-left: 75px;
+  padding-left: 4.6875rem;
   position: relative;
   margin-bottom: 20px;
   margin-bottom: 1.25rem;
@@ -1344,11 +1368,16 @@ a {
   height: 80px;
   height: 5rem;
   left: -3%;
-  top: 25%;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
+  top: 45%;
 }
 
+@media screen and (min-width: 800px) {
+  .p-work__item-title::before {
+    top: 25%;
+  }
+}
 .title1::before {
   background-image: url("../../assets/img/icon/number_1.png");
 }
@@ -1430,8 +1459,8 @@ a {
   margin-bottom: 20px;
   margin-bottom: 1.25rem;
   font-family: "Hiragino Mincho ProN", "ヒラギノ明朝 ProN", "Hiragino Mincho Pro", serif;
-  font-size: 26px;
-  font-size: 1.625rem;
+  font-size: clamp(22px, 5vw, 26px);
+  font-size: clamp(1.375rem, 5vw, 1.625rem);
 }
 
 @media screen and (min-width: 800px) {
@@ -1490,6 +1519,23 @@ a {
     background-image: url("../../assets/img/message/message-text__bg.svg");
   }
 }
+.p-message__bottom-list li:not(:last-child) {
+  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
+}
+
+.p-message__bottom-list li {
+  padding-left: 10px;
+  padding-left: 0.625rem;
+}
+
+.p-message__bottom-list li::marker {
+  content: "⚫︎";
+  color: #000000;
+  font-size: 5px;
+  font-size: 0.3125rem;
+}
+
 .p-message__bottom-text {
   margin-bottom: 30px;
   margin-bottom: 1.875rem;
@@ -1516,7 +1562,7 @@ a {
 }
 
 .p-schedule__bg {
-  height: 78%;
+  height: 90%;
   width: 100vw;
   margin: 0 calc(50% - 50vw);
   background-color: #e5f5ff;
@@ -1634,6 +1680,8 @@ a {
   width: 100%;
   padding: 50px 20px;
   padding: 3.125rem 1.25rem;
+  padding-top: 80px;
+  padding-top: 5rem;
 }
 
 @media screen and (min-width: 800px) {
@@ -1946,8 +1994,8 @@ a {
 }
 
 .p-schedule-prof__title {
-  font-size: 23px;
-  font-size: 1.4375rem;
+  font-size: clamp(20px, 5vw, 23px);
+  font-size: clamp(1.25rem, 5vw, 1.4375rem);
   margin-bottom: 30px;
   margin-bottom: 1.875rem;
   text-align: center;
@@ -2001,12 +2049,14 @@ a {
 }
 .p-schedule__sfaff-name {
   position: absolute;
-  top: 0;
+  top: 1%;
   left: 50%;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
   font-size: 23px;
   font-size: 1.4375rem;
+  width: 100%;
+  text-align: center;
 }
 
 @media screen and (min-width: 800px) {
@@ -2054,6 +2104,8 @@ a {
 .p-profile-item__title {
   font-size: 30px;
   font-size: 1.875rem;
+  font-size: clamp(26px, 5vw, 30px);
+  font-size: clamp(1.625rem, 5vw, 1.875rem);
   position: relative;
   display: inline-block;
   text-align: center;
@@ -2099,6 +2151,16 @@ a {
     margin-bottom: 1.875rem;
   }
 }
+.p-value__title {
+  font-size: clamp(24px, 5vw, 28px);
+  font-size: clamp(1.5rem, 5vw, 1.75rem);
+}
+
+@media screen and (min-width: 800px) {
+  .p-value__title {
+    font-size: 1.75rem;
+  }
+}
 .p-value__wrap {
   margin-bottom: 45px;
   margin-bottom: 2.8125rem;
@@ -2107,8 +2169,8 @@ a {
 .p-value__items {
   background-color: #fff;
   border-radius: 0.9375rem;
-  padding: 5px 10px 20px 10px;
-  padding: 0.3125rem 0.625rem 1.25rem 0.625rem;
+  padding: 15px 10px 20px 10px;
+  padding: 0.9375rem 0.625rem 1.25rem 0.625rem;
 }
 
 @media screen and (min-width: 800px) {
@@ -2258,6 +2320,16 @@ a {
     margin-bottom: 5rem;
   }
 }
+.p-data__title {
+  font-size: clamp(26px, 5vw, 28px);
+  font-size: clamp(1.625rem, 5vw, 1.75rem);
+}
+
+@media screen and (min-width: 800px) {
+  .p-data__title {
+    font-size: 1.75rem;
+  }
+}
 .p-data__items {
   margin-bottom: 50px;
   margin-bottom: 3.125rem;
@@ -2303,8 +2375,8 @@ a {
   }
 }
 .p-data-item__title {
-  font-size: 25px;
-  font-size: 1.5625rem;
+  font-size: clamp(23px, 5vw, 25px);
+  font-size: clamp(1.4375rem, 5vw, 1.5625rem);
   text-align: center;
 }
 
@@ -2452,15 +2524,17 @@ a {
   }
 }
 .p-faq-list__item-question {
-  padding-left: 28px;
-  padding-left: 1.75rem;
+  padding-left: 15px;
+  padding-left: 0.9375rem;
   position: relative;
   color: #0098ee;
   text-indent: -18px;
+  width: 95%;
 }
 
 @media screen and (min-width: 800px) {
   .p-faq-list__item-question {
+    width: 100%;
     text-indent: -0.875rem;
     font-size: 1.125rem;
   }
@@ -2468,13 +2542,14 @@ a {
 .p-faq-list__item-question span {
   margin-right: 10px;
   margin-right: 0.625rem;
-  display: inline-block;
+  display: contents;
   color: #0098ee;
   font-size: 28px;
   font-size: 1.75rem;
 }
 
 .p-faq-list__item-answer {
+  display: none;
   margin-top: 15px;
   margin-top: 0.9375rem;
   padding-left: 30px;
@@ -2492,10 +2567,42 @@ a {
 .p-faq-list__item-answer span {
   margin-right: 10px;
   margin-right: 0.625rem;
-  display: inline-block;
+  display: contents;
   color: #000000;
   font-size: 28px;
   font-size: 1.75rem;
+}
+
+.p-faq-list__item-question::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: -20px;
+  right: -1.25rem;
+  width: 10px;
+  width: 0.625rem;
+  height: 10px;
+  height: 0.625rem;
+  border-top: 3px solid #0098ee;
+  border-top: 0.1875rem solid #0098ee;
+  border-right: 3px solid #0098ee;
+  border-right: 0.1875rem solid #0098ee;
+  -webkit-transform: translateY(-50%) rotate(135deg);
+  transform: translateY(-50%) rotate(135deg);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+@media screen and (min-width: 800px) {
+  .p-faq-list__item-question::before {
+    right: 1.25rem;
+    width: 0.8125rem;
+    height: 0.8125rem;
+  }
+}
+.p-faq-list__item-question.is-open::before {
+  -webkit-transform: translateY(-50%) rotate(315deg);
+  transform: translateY(-50%) rotate(315deg);
 }
 
 .p-company__title {
@@ -2548,6 +2655,11 @@ a {
     margin-left: 1.25rem;
   }
 }
+.p-company__box .tel {
+  font-weight: 600;
+  color: #0098ee;
+}
+
 .p-footer {
   text-align: center;
 }
