--- a/src/sass/layout/_l-schedule.scss
+++ b/src/sass/layout/_l-schedule.scss
@@ -2,7 +2,17 @@
 
 .l-schedule {
   margin-bottom: rem(100);
+  &:last-of-type{
+    margin-bottom: rem(200);
+  }
+  @include mq(md){
+    margin-bottom: rem(180);
+  }
+}
 
+
+.l-schedule.bottom {
+  margin-bottom: rem(200);
   @include mq(md){
     margin-bottom: rem(180);
   }
