--- a/src/sass/project/_p-data.scss
+++ b/src/sass/project/_p-data.scss
@@ -17,6 +17,10 @@
 }
 
 .p-data__title {
+  font-size: clamp(rem(26), 5vw, rem(28));
+  @include mq(md){
+    font-size:  rem(28);
+  }
 }
 
 .main-title {
@@ -60,7 +64,7 @@
 }
 
 .p-data-item__title {
-  font-size:  rem(25);
+  font-size:  clamp( rem(23), 5vw, rem(25));
   text-align: center;
   @include mq(md){
     font-size:  rem(33);
