--- a/src/sass/project/_p-profile.scss
+++ b/src/sass/project/_p-profile.scss
@@ -34,6 +34,7 @@
 
 .p-profile-item__title {
   font-size:  rem(30);
+  font-size: clamp( rem(26), 5vw, rem(30));
   position: relative;
   display: inline-block;
   text-align: center;
