--- a/src/sass/project/_p-schedule.scss
+++ b/src/sass/project/_p-schedule.scss
@@ -5,7 +5,7 @@
 }
 
 .p-schedule__bg {
-  height: 78%;
+  height: 90%;
   width: 100vw;
   margin: 0 calc(50% - 50vw);
   background-color: $color-blue;
@@ -105,6 +105,7 @@
   position: relative;
   width: 100%;
   padding: rem(50) rem(20);
+  padding-top:  rem(80);
   @include mq(md) {
     padding: rem(100) rem(20);
   }
@@ -345,7 +346,7 @@
 }
 
 .p-schedule-prof__title {
-  font-size:  rem(23);
+  font-size:  clamp(rem(20), 5vw,  rem(23));
   margin-bottom: rem(30);
   text-align: center;
   @include mq(md) {
@@ -392,10 +393,12 @@
 
 .p-schedule__sfaff-name{
   position:absolute;
-  top: 0;
+  top: 1%;
   left: 50%;
   transform: translateX(-50%);
   font-size:  rem(23);
+  width: 100%;
+  text-align: center;
   @include mq(md){
     top:  rem(-30);
     font-size:  rem(33);
