--- a/src/sass/foundation/_base.scss
+++ b/src/sass/foundation/_base.scss
@@ -51,6 +51,10 @@ body {
   overflow-x:clip;
 }
 
+h2 {
+  font-weight: $regular;
+}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -114,7 +118,7 @@ $color-orange: #ff9648;
 ===================================*/
 .inner {
   max-width: rem(1080);
-  padding: 0 rem(35);
+  padding: 0 rem(20);
   width: 100%;
   margin: 0 auto;
   @include mq(md) {
