--- a/src/sass/project/_p-schedule.scss
+++ b/src/sass/project/_p-schedule.scss
@@ -83,6 +83,10 @@
   @include mq(md) {
     margin-bottom: rem(60);
   }
+
+  p {
+    font-size:  rem(13);
+  }
 }
 
 .p-schedule__title {
@@ -303,8 +307,23 @@
   }
 }
 
+.p-schedule__first-info {
+  position: relative;
+  height: 12vh;
+  strong {
+    font-weight: 700;
+    padding-right: rem(20);
+  }
+
+  span {
+    position: absolute;
+    left: 0;
+    padding-left:  rem(100);
+  }
+}
+
 .p-schedule-prof__box {
-  margin-bottom: rem(50);
+  margin-bottom: rem(30);
   @include mq(md) {
     display: flex;
     margin-bottom: rem(50);
@@ -329,20 +348,6 @@
   @include mq(md) {
     padding-top: rem(50);
     width: 50%;
-  }
-  strong {
-    font-weight: 700;
-    padding-right: rem(20);
-  }
-
-  p {
-    position: relative;
-  }
-
-  span {
-    position: absolute;
-    left: 0;
-    padding-left:  rem(100);
   }
 }
 
