--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2362,6 +2362,16 @@ p {
     padding: 1.5625rem 0;
   }
 }
+.p-career__box-text span, .p-career__box-text strong {
+  display: inline-block;
+  line-height: 1.5;
+}
+
+.p-career__box-text span {
+  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
+}
+
 .p-career__box + .p-career__box .p-career__box-text {
   margin-bottom: 0px;
   margin-bottom: 0rem;
