--- a/src/sass/project/_p-schedule.scss
+++ b/src/sass/project/_p-schedule.scss
@@ -178,38 +178,37 @@
   @include mq(md){
     position: absolute;
   }
-  &:not(:last-child) {
-    margin-bottom: rem(30);
+  // &:not(:last-child) {
+  //   margin-bottom: rem(30);
+  //   @include mq(md){
+  //     margin-bottom: rem(150);
+  //   }
+  // }
+  &:nth-of-type(1) {
     @include mq(md){
-      margin-bottom: rem(150);
-    }
-  }
-  &:nth-last-of-type(1) {
-    @include mq(md){
-      top: 10%;
+      top: 5%;
       right: 0;
     }
   }
-  &:nth-last-of-type(2) {
+  &:nth-of-type(2) {
     margin-left: rem(-50);
     @include mq(md){
-      // margin-left: rem(-80);
-      top: 40%;
-      right:  rem(-50);
+      top: 30%;
+      right:  rem(-100);
     }
   }
-  &:nth-last-of-type(3) {
-    margin-top: rem(30);
+  &:nth-of-type(3) {
+    // margin-top: rem(30);
     @include mq(md){
-      bottom: 0;
+      top: 55%;
       right: 0;
     }
   }
-  &:nth-last-of-type(4) {
-    margin-top: rem(30);
+  &:nth-of-type(4) {
+    // margin-top: rem(30);
     @include mq(md){
-      bottom: 0;
-      right: 0;
+      top: 80%;
+      right: rem(-100);
     }
   }
   img {
